--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -70,6 +70,10 @@
         <item name="android:windowLightStatusBar">true</item>
         <item name="android:windowTranslucentStatus">true</item>
         <item name="windowActionModeOverlay">true</item>
+        <item name="preferenceTheme">@style/AppPreferenceThemeOverlay</item>
+
     </style>
+
+
 </resources>
 
