--- a/app/src/main/res/layout/item_file.xml
+++ b/app/src/main/res/layout/item_file.xml
@@ -4,19 +4,20 @@
     android:id="@+id/linear_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="1dp">
+    android:layout_marginBottom="1dp"
+    android:orientation="vertical">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
-        android:layout_marginEnd="5dp"
-        android:layout_height="wrap_content">
+        android:layout_marginEnd="5dp">
 
         <TextView
             android:id="@+id/file_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="10dp"
+            android:layout_marginEnd="5dp"
             android:gravity="center_vertical"
             android:alpha="0.7"
             android:layout_marginBottom="5dp"
@@ -85,16 +86,17 @@
 
         <TextView
             android:id="@+id/file_name"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
             android:layout_marginTop="2dp"
+            android:layout_marginEnd="5dp"
             android:text="TextView"
             android:textSize="14sp"
             android:ellipsize="middle"
-            android:singleLine="true"
+            android:maxLines="1"
             app:layout_constraintStart_toEndOf="@+id/card_view"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 </LinearLayout>
