--- a/app/src/main/res/layout/bottom_sheet_compressor_archive.xml
+++ b/app/src/main/res/layout/bottom_sheet_compressor_archive.xml
@@ -15,118 +15,192 @@
   ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
   -->
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <TextView
-        android:id="@+id/fileName"
+    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="File Name"
-        android:textSize="18sp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="30dp"
-        android:textStyle="bold"/>
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/btnOpenWith"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="16dp"
-        style="@style/Widget.Material3.Button.TonalButton"
-        android:layout_marginEnd="16dp"
-        android:text="@string/open_with"
-        app:cornerRadius="5dp"/>
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/btnExtract"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="16dp"
-        style="@style/Widget.Material3.Button.TonalButton"
-        android:layout_marginEnd="16dp"
-        android:text="@string/extract"
-        app:cornerRadius="5dp"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/compress_with"
-        android:textStyle="bold"
-        android:textSize="18sp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginTop="20dp"/>
+        android:layout_gravity="center_horizontal"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btnLzma"
-            android:layout_width="0dp"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/lzma"
-            style="@style/Widget.Material3.Button.TonalButton"
+            android:layout_marginTop="50dp"
             android:layout_marginStart="16dp"
-            android:layout_weight="1"
-            app:cornerRadius="5dp"/>
+            android:layout_marginEnd="16dp">
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btnBzip2"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="@string/bzip2"
-            style="@style/Widget.Material3.Button.TonalButton"
-            android:layout_marginStart="10dp"
-            android:layout_weight="1"
-            android:layout_marginEnd="16dp"
-            app:cornerRadius="5dp"/>
-    </LinearLayout>
+            <TextView
+                android:id="@+id/fileDate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="5dp"
+                android:gravity="center_vertical"
+                android:alpha="0.7"
+                android:text="TextView"
+                android:textSize="12sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:orientation="horizontal">
+            <TextView
+                android:id="@+id/fileSize"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:gravity="center_vertical"
+                android:alpha="0.7"
+                android:text="TextView"
+                android:textSize="12sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/cardView" />
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btnXz"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="@string/xz"
-            style="@style/Widget.Material3.Button.TonalButton"
-            android:layout_weight="1"
+            <com.google.android.material.card.MaterialCardView
+                android:id="@+id/cardView"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                style="@style/Widget.Material3.CardView.Filled"
+                android:elevation="3dp"
+                app:cardCornerRadius="5dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <TextView
+                    android:id="@+id/fileExtension"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:fontFamily="@font/nova_square"
+                    android:text="FILE"
+                    android:textSize="14sp"
+                    android:textStyle="bold"/>
+            </com.google.android.material.card.MaterialCardView>
+
+            <TextView
+                android:id="@+id/fileName"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:text="TextView"
+                android:textSize="15sp"
+                android:ellipsize="middle"
+                android:maxLines="1"
+                app:layout_constraintStart_toEndOf="@+id/cardView"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <com.google.android.material.divider.MaterialDivider
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
             android:layout_marginStart="16dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="16dp"/>
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnOpenWith"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_marginStart="16dp"
+            style="@style/Widget.Material3.Button.TonalButton"
+            android:layout_marginEnd="16dp"
+            android:text="@string/open_with"
             app:cornerRadius="5dp"/>
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/btnGzip"
-            android:layout_width="0dp"
+            android:id="@+id/btnExtract"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/gzip"
+            android:layout_marginTop="16dp"
+            android:layout_marginStart="16dp"
             style="@style/Widget.Material3.Button.TonalButton"
-            android:layout_marginStart="10dp"
             android:layout_marginEnd="16dp"
-            android:layout_weight="1"
+            android:text="@string/extract"
             app:cornerRadius="5dp"/>
-    </LinearLayout>
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/btnDelete"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:cornerRadius="5dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="20dp"
-        android:text="@string/delete" />
-</LinearLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/compress_with"
+            android:textStyle="bold"
+            android:textSize="16sp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginTop="20dp"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:orientation="horizontal">
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btnLzma"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="@string/lzma"
+                style="@style/Widget.Material3.Button.TonalButton"
+                android:layout_marginStart="16dp"
+                android:layout_weight="1"
+                app:cornerRadius="5dp"/>
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btnBzip2"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="@string/bzip2"
+                style="@style/Widget.Material3.Button.TonalButton"
+                android:layout_marginStart="10dp"
+                android:layout_weight="1"
+                android:layout_marginEnd="16dp"
+                app:cornerRadius="5dp"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal">
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btnXz"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="@string/xz"
+                style="@style/Widget.Material3.Button.TonalButton"
+                android:layout_weight="1"
+                android:layout_marginStart="16dp"
+                app:cornerRadius="5dp"/>
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btnGzip"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="@string/gzip"
+                style="@style/Widget.Material3.Button.TonalButton"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="16dp"
+                android:layout_weight="1"
+                app:cornerRadius="5dp"/>
+        </LinearLayout>
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnDelete"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:cornerRadius="5dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="20dp"
+            android:text="@string/delete" />
+    </LinearLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
