--- a/app/src/main/res/layout/fragment_donation.xml
+++ b/app/src/main/res/layout/fragment_donation.xml
@@ -28,7 +28,9 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="18sp"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        android:layout_marginBottom="10dp"
         android:text="@string/donate"/>
 
     <com.google.android.material.button.MaterialButton
@@ -36,7 +38,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:icon="@drawable/ic_liberapay"
-        android:layout_marginTop="10dp"
         style="@style/Widget.Material3.Button.TonalButton"
         app:cornerRadius="5dp"
         android:text="@string/liberapay" />
@@ -45,8 +46,8 @@
         android:id="@+id/githubSBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:icon="@drawable/ic_github"
         android:layout_marginTop="10dp"
+        app:icon="@drawable/ic_github"
         style="@style/Widget.Material3.Button.TonalButton"
         app:cornerRadius="5dp"
         android:text="Github Sponsor" />
