--- a/app/src/main/res/layout/progress_dialog_extract.xml
+++ b/app/src/main/res/layout/progress_dialog_extract.xml
@@ -25,7 +25,7 @@
         android:id="@+id/progressText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/extracting"
+        android:text="@string/extraction_ongoing"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginTop="16dp"
