add #40 add better error log

--- a/app/src/main/res/layout/seven_z_option_dialog.xml
+++ b/app/src/main/res/layout/seven_z_option_dialog.xml
@@ -100,6 +100,23 @@
                 android:hint="@string/enter_password"/>
         </com.google.android.material.textfield.TextInputLayout>
 
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            app:endIconMode="password_toggle">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/confirmPasswordEditText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/confirm_password"
+                style="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense"
+                android:hyphenationFrequency="none"
+                android:inputType="textPassword"/>
+        </com.google.android.material.textfield.TextInputLayout>
+
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
