--- a/app/src/main/res/layout/bottom_sheet_compressor_archive.xml
+++ b/app/src/main/res/layout/bottom_sheet_compressor_archive.xml
@@ -187,6 +187,16 @@
                 android:text="@string/gzip"
                 style="@style/Widget.Material3.Button.TonalButton"
                 android:layout_marginStart="10dp"
+                android:layout_weight="1"
+                app:cornerRadius="5dp"/>
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btnZstd"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="@string/zstd"
+                style="@style/Widget.Material3.Button.TonalButton"
+                android:layout_marginStart="10dp"
                 android:layout_marginEnd="16dp"
                 android:layout_weight="1"
                 app:cornerRadius="5dp"/>
