--- a/app/src/main/res/xml/preference.xml
+++ b/app/src/main/res/xml/preference.xml
@@ -31,6 +31,15 @@
         android:summary="@string/archive_path_summary"
         android:dialogTitle="@string/archive_path"/>
 
+    <EditTextPreference
+        android:key="zstd_compression_level"
+        android:title="ZSTD Compression Level"
+        android:dialogTitle="@string/compression_level"
+        android:dialogMessage="@string/please_enter_value_between_0_and_22"
+        android:defaultValue="3"
+        android:inputType="number"
+        android:icon="@drawable/ic_compress"/>
+
     <PreferenceCategory>
 
         <Preference
@@ -43,5 +52,4 @@
             android:title="@string/privacy_policy"
             android:icon="@drawable/ic_privacy_policy"/>
     </PreferenceCategory>
-
 </PreferenceScreen>
