--- a/app/src/main/res/layout/tar_option_dialog.xml
+++ b/app/src/main/res/layout/tar_option_dialog.xml
@@ -76,6 +76,72 @@
                 android:hint="@string/enter_name_of_archive_optional"/>
         </com.google.android.material.textfield.TextInputLayout>
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:layout_marginTop="16dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginBottom="5dp"
+            android:textStyle="bold"
+            android:text="@string/compression_method"/>
+
+        <com.google.android.material.chip.ChipGroup
+            android:id="@+id/compressionChipGroup"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            app:singleSelection="true">
+
+            <com.google.android.material.chip.Chip
+                android:id="@+id/chipTar"
+                style="@style/Widget.MaterialComponents.Chip.Choice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:chipCornerRadius="5dp"
+                android:text="@string/no_compression"
+                android:checked="true"/>
+
+            <com.google.android.material.chip.Chip
+                android:id="@+id/chipTarBz2"
+                style="@style/Widget.MaterialComponents.Chip.Choice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:chipCornerRadius="5dp"
+                android:text="tar.bz2"/>
+
+            <com.google.android.material.chip.Chip
+                android:id="@+id/chipTarGz"
+                style="@style/Widget.MaterialComponents.Chip.Choice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:chipCornerRadius="5dp"
+                android:text="tar.gz"/>
+
+            <com.google.android.material.chip.Chip
+                android:id="@+id/chipTarLzma"
+                style="@style/Widget.MaterialComponents.Chip.Choice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:chipCornerRadius="5dp"
+                android:text="tar.lzma"/>
+
+            <com.google.android.material.chip.Chip
+                android:id="@+id/chipTarXz"
+                style="@style/Widget.MaterialComponents.Chip.Choice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:chipCornerRadius="5dp"
+                android:text="tar.xz"/>
+
+            <com.google.android.material.chip.Chip
+                android:id="@+id/chipTarZstd"
+                style="@style/Widget.MaterialComponents.Chip.Choice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:chipCornerRadius="5dp"
+                android:text="tar.zst"/>
+        </com.google.android.material.chip.ChipGroup>
         <com.google.android.material.button.MaterialButton
             android:id="@+id/okButton"
             android:layout_width="match_parent"
