--- a/app/src/main/res/layout/dialog_archive_type.xml
+++ b/app/src/main/res/layout/dialog_archive_type.xml
@@ -27,6 +27,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:singleSelection="true"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         app:chipSpacingHorizontal="8dp"
         app:chipSpacingVertical="8dp"/>
 </LinearLayout>
